--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="{{url_for('static', filename='img/favicon.png')}}" type="image/png">
+        <link rel="icon" href="{{url_for('static', filename='img/logo.png')}}" type="image/png">
         <title>About Us</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}">
@@ -105,226 +105,14 @@
     </section>
     <!--================ End About Us Area =================-->
 
-	<!--================Team Area =================-->
-	<section class="team_area section_gap">
-        <div class="container">
-            <div class="main_title">
-                <h2>Meet our voluteer</h2>
-                <p>Creepeth called face upon face yielding midst is after moveth </p>
-            </div>
-            <div class="row team_inner">
-                <div class="col-lg-3 col-md-6">
-                    <div class="team_item">
-                        <div class="team_img">
-                            <img class="img-fluid" src="img/voluteer/v1.jpg" alt="">
-                        </div>
-                        <div class="team_name">
-                            <h4>Alea Mirslava</h4>
-                            <p>Party Manager</p>
-                            <p class="mt-20">
-                                So seed seed green that winged cattle in kath  moved us land years living.
-                            </p>
-                            <div class="social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="active"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-envelope-o"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+	<!--================Mission and Vision =================-->
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="team_item">
-                        <div class="team_img">
-                            <img class="img-fluid" src="img/voluteer/v2.jpg" alt="">
-                        </div>
-                        <div class="team_name">
-                            <h4>Adam Virland</h4>
-                            <p>Party Manager</p>
-                            <p class="mt-20">
-                                So seed seed green that winged cattle in kath  moved us land years living.
-                            </p>
-                            <div class="social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="active"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-envelope-o"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="team_item">
-                        <div class="team_img">
-                            <img class="img-fluid" src="img/voluteer/v3.jpg" alt="">
-                        </div>
-                        <div class="team_name">
-                            <h4>Adam Virland</h4>
-                            <p>Party Manager</p>
-                            <p class="mt-20">
-                                So seed seed green that winged cattle in kath  moved us land years living.
-                            </p>
-                            <div class="social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="active"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-envelope-o"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="team_item">
-                        <div class="team_img">
-                            <img class="img-fluid" src="img/voluteer/v4.jpg" alt="">
-                        </div>
-                        <div class="team_name">
-                            <h4>Adam Virland</h4>
-                            <p>Party Manager</p>
-                            <p class="mt-20">
-                                So seed seed green that winged cattle in kath  moved us land years living.
-                            </p>
-                            <div class="social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#" class="active"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-envelope-o"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================End Team Area =================-->
-
-	<!--================ Start CTA Area =================-->
-	<div class="cta-area section_gap overlay">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-7">
-                    <h1>Become a volunteer</h1>
-                    <p>
-                        So seed seed green that winged cattle in. Gathering thing made fly you're 
-                        divided deep leave on the medicene moved us land years living.
-                    </p>
-                    <a href="#" class="primary_btn yellow_btn rounded">join with us</a>
-                </div>
-            </div>
-        </div>
+    <div>
+        
     </div>
-    <!--================ End CTA Area =================-->
-        
-    <!--================ Start footer Area  =================-->	
-    <footer>
-        <div class="footer-area">
-            <div class="container">
-                <div class="row section_gap">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title large_title">Our Mission</h4>
-                            <p>
-                                So seed seed green that winged cattle in. Gathering thing made fly you're no 
-                                divided deep moved us lan Gathering thing us land years living.
-                            </p>
-                            <p>
-                                So seed seed green that winged cattle in. Gathering thing made fly you're no divided deep moved 
-                            </p>
-                        </div>
-                    </div>
-                    <div class="offset-lg-1 col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title">Quick Links</h4>
-                            <ul class="list">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Causes</a></li>
-                                <li><a href="#">Event</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget instafeed">
-                            <h4 class="footer_title">Gallery</h6>
-                            <ul class="list instafeed d-flex flex-wrap">
-                                <li><img src="img/gallery/g1.jpg" alt=""></li>
-                                <li><img src="img/gallery/g2.jpg" alt=""></li>
-                                <li><img src="img/gallery/g3.jpg" alt=""></li>
-                                <li><img src="img/gallery/g4.jpg" alt=""></li>
-                                <li><img src="img/gallery/g5.jpg" alt=""></li>
-                                <li><img src="img/gallery/g6.jpg" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="offset-lg-1 col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget tp_widgets">
-                            <h4 class="footer_title">Contact Us</h4>
-                            <div class="ml-40">
-                                <p class="sm-head">
-                                    <span class="fa fa-location-arrow"></span>
-                                    Head Office
-                                </p>
-                                <p>123, Main Street, Your City</p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-phone"></span>
-                                    Phone Number
-                                </p>
-                                <p>
-                                    +123 456 7890 <br>
-                                    +123 456 7890
-                                </p>
-    
-                                <p class="sm-head">
-                                    <span class="fa fa-envelope"></span>
-                                    Email
-                                </p>
-                                <p>
-                                    free@infoexample.com <br>
-                                    www.infoexample.com
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+	
 
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row d-flex">
-                    <p class="col-lg-12 footer-text text-center">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!--================ End footer Area  =================-->  
-        
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="js/popper.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/stellar.js"></script>
-        <script src="vendors/lightbox/simpleLightbox.min.js"></script>
-        <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-        <script src="js/jquery.ajaxchimp.min.js"></script>
-        <script src="js/mail-script.js"></script>
-        <!-- contact js -->
-        <script src="js/jquery.form.js"></script>
-        <script src="js/jquery.validate.min.js"></script>
-        <script src="js/contact.js"></script>
-        <!--gmaps Js-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-        <script src="js/gmaps.min.js"></script>
-        <script src="js/theme.js"></script>
+
+
     </body>
 </html>
