--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -36,11 +36,11 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
                                 <li class="nav-item active"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="causes.html">Causes</a>
+                                <li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                     <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="events.html">Events</a>
+                                        <li class="nav-item"><a class="nav-link" href="/events">Events</a>
                                         <li class="nav-item"><a class="nav-link" href="event-details.html">Event Details</a> 
                                         <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
                                     </ul>
