--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="home.html" id="logo_pos"><img src="static/img/logo.png" alt=""></a>
+						<a class="navbar-brand logo_h" href="/" id="logo_pos"><img src="static/img/logo.png" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -56,11 +56,11 @@
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li> 
 								<li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
-								<li class="nav-item"><a class="nav-link" href="causes.html">Causes</a>
+								<li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
 									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="events.html">Events</a>
+										<li class="nav-item"><a class="nav-link" href="/events">Events</a>
 										<li class="nav-item"><a class="nav-link" href="event-details.html">Event Details</a>
 										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 									</ul>
