--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -77,6 +77,7 @@
     <!--================ End Home Banner Area =================-->
 
 	<!--================ Start About Us Area =================-->
+
 	<section class="about_area section_gap">
         <div class="container">
             <div class="row">	
@@ -106,13 +107,58 @@
     <!--================ End About Us Area =================-->
 
 	<!--================Mission and Vision =================-->
-
-    <div>
-        
-    </div>
 	
+    <section class="features_causes">
+        <div class="container">
+            <table align="center">
+                <tr>
+                    <td>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    
+                        <div class="card" style="width: 430px ; padding-right: 30px" >
+                            <div class="jumbotron" style="background-color: #e6ffe6">
+                                <div class="card-body" style="text-align: center ; ">
+                                <div class="card_inner_body" style="padding-top: 3px " >
 
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Mission</font></h4>
+                                    <p>
+                                    o help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
+                                    </p>  <br/>
+                                    
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        
+        </div>
+</td>
+<td>
 
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    
+                        <div class="card" style="width: 430px ; padding-left: 30px;" >
+                            <div class="jumbotron" style="background-color: #e6ffe6">
+                                <div class="card-body" style="text-align: center ; ">
+                                <div class="card_inner_body" style="padding-top: 3px " >
+
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Vision </font></h4> <br/>
+                                    
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</td>
+</tr>
+</table>
+        
+
+    </section>
 
     </body>
 </html>
