--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5108,6 +5108,7 @@ input[type=submit].btn-block {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
     background-color: #e9ecef;
+    color:#d6f5d6;
     border-radius: .3rem
 }
 
