--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -7,14 +7,14 @@
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>Events Details</title>
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="vendors/linericon/style.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+        <link rel="stylesheet" href="static/css/bootstrap.css">
+        <link rel="stylesheet" href="static/vendors/linericon/style.css">
+        <link rel="stylesheet" href="static/css/font-awesome.min.css">
+        <link rel="stylesheet" href="static/vendors/lightbox/simpleLightbox.css">
+        <link rel="stylesheet" href="static/vendors/nice-select/css/nice-select.css">
         <!-- main css -->
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="static/css/responsive.css">
     </head>
 <body>
         
@@ -34,25 +34,25 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                             <ul class="nav navbar-nav menu_nav ml-auto">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="causes.html">Causes</a>
+                                <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
+                                <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
+                                <li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
                                 <li class="nav-item submenu dropdown active">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                     <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="events.html">Events</a>
-                                        <li class="nav-item"><a class="nav-link" href="event-details.html">Event Details</a>
-                                        <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/events">Events</a>
+                                        <li class="nav-item"><a class="nav-link" href="/event-details">Event Details</a>
+                                        <li class="nav-item"><a class="nav-link" href="/elements">Elements</a></li>
                                     </ul>
                                 </li> 
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
                                     <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/single-blog">Blog Details</a></li>
                                     </ul>
                                 </li> 
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                             </ul>
                         </div> 
                     </div>
