--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -36,7 +36,7 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
                                 <li class="nav-item active"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
+                                <li class="nav-item"><a class="nav-link" href="/store">Store</a>
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                     <ul class="dropdown-menu">
@@ -121,10 +121,12 @@
                                 <div class="card-body" style="text-align: center ; ">
                                 <div class="card_inner_body" style="padding-top: 3px " >
 
-                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Mission</font></h4>
-                                    <p>
-                                    o help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
-                                    </p>  <br/>
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300"> Mission</font></h4>
+                                    <p style="font-size: 18px">
+                                        <font color="black"> 
+                                    Our mision is to help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
+                                </font>
+                                    </p>  
                                     
                                 </div>
                             </div>
@@ -140,11 +142,15 @@
                 <div class="col-lg-4 col-md-6">
                     
                         <div class="card" style="width: 430px ; padding-left: 30px;" >
-                            <div class="jumbotron" style="background-color: #e6ffe6">
+                            <div class="jumbotron" style="background-color: #e6ffe6 ;height: 390px ;">
                                 <div class="card-body" style="text-align: center ; ">
-                                <div class="card_inner_body" style="padding-top: 3px " >
+                                <div class="card_inner_body" style="padding-top: 3px ;" >
 
-                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Vision </font></h4> <br/>
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Vision </font></h4><p style="font-size: 18px">
+                                        <font color="black"> 
+                                        Our vision is to form a community where people with mental disabilities can pursue their dreams and goals, and live independently in their community .
+                                    </font>
+                                    </p>
                                     
                                 </div>
                             </div>
@@ -153,9 +159,19 @@
             </div>
         </div>
     </div>
-</td>
-</tr>
-</table>
+        </td>
+        </tr>
+        </table>
+<div>
+
+        <font style="font-size: 18px;">
+            <i><b>
+                <p align="center">
+                    <font color="#003300">
+        “Think before you speak, Read before you think”</font> </p></b></i> <br/> <p align="center">～Fran Lebowitz</p>
+
+
+</div>
         
 
     </section>
