--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@
 						Rebooks is a social bookstore chain that represents a rehabilitation center for people who are dealing with mental disabilities through reusing books.
 					</p>
 					<a class="primary_btn mr-20" href="#">Donate Now</a>
-					<a class="primary_btn yellow_btn text-white" href="causes.html">See Causes</a>
+					<a class="primary_btn yellow_btn text-white" href="/causes">See Causes</a>
 				</div>
 			</div>
 		</div>
