--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <link rel="icon" href="static/img/logo.png" type="image/png">
         <title>Events Details</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="static/css/bootstrap.css">
@@ -25,7 +25,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container">
                         <!-- Brand and toggle get grouped for better mobile display -->
-                        <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+                        <a class="navbar-brand logo_h" href="index.html"><img src="static/img/logo.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
                                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
+                                <li class="nav-item"><a class="nav-link" href="/stote">store</a>
                                 <li class="nav-item submenu dropdown active">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
                                     <ul class="dropdown-menu">
