--- a/templates/home.html
+++ b/templates/home.html
@@ -61,18 +61,18 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
 									<ul class="dropdown-menu">
 										<li class="nav-item"><a class="nav-link" href="/events">Events</a>
-										<li class="nav-item"><a class="nav-link" href="/event-details">Event Details</a>
-										<li class="nav-item"><a class="nav-link" href="/elements">Elements</a></li>
+										<li class="nav-item"><a class="nav-link" href="event-details.html">Event Details</a>
+										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
 									</ul>
 								</li> 
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
 									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-										<li class="nav-item"><a class="nav-link" href="/single-blog">Blog Details</a></li>
+										<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 									</ul>
 								</li> 
-								<li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 							</ul>
 						</div> 
 					</div>
@@ -93,7 +93,7 @@
 						Rebooks is a social bookstore chain that represents a rehabilitation center for people who are dealing with mental disabilities through reusing books.
 					</p>
 					<a class="primary_btn mr-20" href="#">Donate Now</a>
-					<a class="primary_btn yellow_btn text-white" href="/about">ABout us</a>
+					<a class="primary_btn yellow_btn text-white" href="/about">About us</a>
 				</div>
 			</div>
 		</div>
