--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,65 +1,6 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Contact</title>
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="static/css/bootstrap.css">
-        <link rel="stylesheet" href="static/vendors/linericon/style.css">
-        <link rel="stylesheet" href="static/css/font-awesome.min.css">
-        <link rel="stylesheet" href="static/vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="static/vendors/nice-select/css/nice-select.css">
-        <!-- main css -->
-        <link rel="stylesheet" href="static/css/style.css">
-        <link rel="stylesheet" href="static/css/responsive.css">
-    </head>
-<body>
-        
-    <!--================ Start Header Menu Area =================-->
-    <header class="header_area">
-        <div class="main_menu">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <a class="navbar-brand logo_h" href="/"><img src="img/logo.png" alt=""></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                            <ul class="nav navbar-nav menu_nav ml-auto">
-                                <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item"><a class="nav-link" href="/causes">Causes</a>
-                                <li class="nav-item submenu dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="/events">Events</a>
-                                        <li class="nav-item"><a class="nav-link" href="/event-details">Event Details</a> 
-                                        <li class="nav-item"><a class="nav-link" href="/elements">Elements</a></li>
-                                    </ul>
-                                </li> 
-                                <li class="nav-item submenu dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="/single-blog">Blog Details</a></li>
-                                    </ul>
-                                </li> 
-                                <li class="nav-item active"><a class="nav-link" href="/contact">Contact</a></li>
-                            </ul>
-                        </div> 
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
+{% extends "layout.html" %}
+
+{% block content %}
     <!--================ End Header Menu Area =================-->
         
     <!--================Home Banner Area =================-->
@@ -301,4 +242,5 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="js/gmaps.min.js"></script>
         <script src="js/theme.js"></script>
     </body>
+{% endblock %}
 </html>
