--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -116,7 +116,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     
-                        <div class="card" style="width: 430px ; padding-right: 30px" >
+                        <div class="card" style="width: 430px ; height: 350px; padding-right: 30px" >
                             <div class="jumbotron" style="background-color: #e6ffe6">
                                 <div class="card-body" style="text-align: center ; ">
                                 <div class="card_inner_body" style="padding-top: 3px " >
@@ -124,7 +124,7 @@
                                     <h4 class="card-title" style="font-size: 26px ;" > <font color="#003300"> Mission</font></h4>
                                     <p style="font-size: 18px">
                                         <font color="black"> 
-                                    Our mision is to help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
+                                    Our mission is to help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
                                 </font>
                                     </p>  
                                     
@@ -141,7 +141,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     
-                        <div class="card" style="width: 430px ; padding-left: 30px;" >
+                        <div class="card" style="width: 430px ; height: 350px; padding-left: 30px;" >
                             <div class="jumbotron" style="background-color: #e6ffe6 ;height: 390px ;">
                                 <div class="card-body" style="text-align: center ; ">
                                 <div class="card_inner_body" style="padding-top: 3px ;" >
