--- a/templates/home.html
+++ b/templates/home.html
@@ -96,9 +96,7 @@
 
 
 
-					<a class="primary_btn yellow_btn text-white" href="/causes">See Causes</a>
-
-					<a class="primary_btn yellow_btn text-white" href="/about">ABout us</a>
+					<a class="primary_btn yellow_btn text-white" href="/about">About us</a>
 
 				</div>
 			</div>
@@ -117,7 +115,7 @@
 				<div class="mycol">
 					<div class="single_causes">
 						<h4><img src="static/img/1.png" width="100px"></h4>
-						<img src="img/bg.jpg" alt="" >
+						
 						<p>
 							Bookstores scattered throughout the country, logistics center, visitor center and customer service center
 						</p>
@@ -126,16 +124,17 @@
 				<div class="mycol">
 					<div class="single_causes">
 						<h4><img src="static/img/2.png" width="100px"></h4>
-						<img src="img/causes/c2.png" alt="">
+						
 						<p>
-							The largest website for selling second hand books in Israel rebooks.org.il
+							The largest website for selling second hand books in Israel 
+							<a href="https://rebooks.org.il/?he_IL"> rebooks.org.il</a>
 						</p>
 					</div>
 				</div>
 				<div class="mycol">
 					<div class="single_causes">
 						<h4><img src="static/img/3.png" width="100px"></h4>
-						<img src="img/causes/c3.png" alt="">
+						
 						<p>
 							About 500 positions for sale and book lending in businesses across the country
 						</p>
@@ -144,7 +143,7 @@
 				<div class="mycol">
 					<div class="single_causes">
 						<h4><img src="static/img/4.png" width="100px"></h4>
-						<img src="img/causes/c2.png" alt="">
+						
 						<p>
 							"Library at the station"
 Question Library Project in collaboration with Israel Railways
