start workig in the log in page

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -17,6 +17,33 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/responsive.css')}}">
     </head>
 <body>
+	<table align="center">
+                <tr>
+                    <td>
+            <div class="row" style="margin-left: 40%">
+                <div class="col-lg-4 col-md-6">
+                    
+                        <div class="card">
+                            <div class="jumbotron" style="background-color: #006600;">
+                                <div class="card-body" style="text-align: center ; ">
+                                <div class="card_inner_body" style="padding-top: 3px " >
 
+                                    <h4 class="card-title" style="font-size: 26px ;" > <font color="white"> Log In</font></h4>
+                                    <p style="font-size: 18px">
+                                        <font color="black"> 
+                                    Our mission is to help people with disabilities, and specifically people with mental disabilities, to be included in society, to pursue their journeys, to reach their functional goals and to live independently in their community.
+                                </font>
+                                    </p>  
+                                    
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        
+        </div>
+</td>
+</tr>
+</table>
 </body>
 </html>
