--- a/templates/store.html
+++ b/templates/store.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <!-- Required meta tags -->
@@ -64,11 +63,7 @@
     </header>
     <!--================ End Header Menu Area =================-->
         
-=======
-{% extends "layout.html" %}
 
-{% block content %}
->>>>>>> 5affa7803ed7806403ddbaadd12505b4d8e51cc3
     <!--================ Home Banner Area =================-->
     <section class="banner_area">
         <div class="banner_inner d-flex align-items-center">
@@ -87,5 +82,5 @@
 	
     </body>
 
-{% endblock %}
+
 </html>
