--- a/templates/staff.html
+++ b/templates/staff.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="banner_content text-center">
                     <h2>Staff</h2>
-                    <p>Platea nullam nostra laoreet potenti hendrerit laoreet enim nisl</p>
+                    <p>We welcome you to meet our staff here in Rebooks!</p>
                 </div>
             </div>
         </div>
