--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,12 +20,15 @@
         
     <!--================ Start Header Menu Area =================-->
     <header class="header_area">
+    {% block login %}
+
+    {% endblock %}
         <div class="main_menu">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container">
                         <!-- Brand and toggle get grouped for better mobile display -->
-                        <a class="navbar-brand logo_h" href="home.html"><img src="static/img/logo.png" alt=""></a>
+                        <a class="navbar-brand logo_h" href='/'><img src="static/img/logo.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -36,7 +39,7 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
                                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item active"><a class="nav-link" href="/store">Store</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/staff">Staff</a></li>
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
