--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Rebooks</title>
+</head>
+<body>
+
 {% extends "layout.html" %}
 
 {% block content %}
@@ -9,7 +16,7 @@
 			<div class="container">
 				<div class="banner_content">
 					<p class="upper_text">Rebooks</p>
-					<h2>to make the better world</h2>
+					<h2>Leaders are Readers</h2>
 					<p>
 						Rebooks is a social bookstore chain that represents a rehabilitation center for people who are dealing with mental disabilities through reusing books.
 					</p>
@@ -106,7 +113,7 @@ Question Library Project in collaboration with Israel Railways
 						<div class="card">
 							<div class="jumbotron">
 							<div class="card-body" style="text-align: center ; ">
-								<div class="card_inner_body" style="padding-top: 3px " >
+								<div class="card_inner_body" style="padding-top: 3px; " >
 
 									<h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Deception Wars </font></h4> <br/>
 									<p class="card-text">
@@ -156,7 +163,7 @@ Question Library Project in collaboration with Israel Railways
 					<div class="card">
 							<div class="jumbotron">
 							<div class="card-body" style="text-align: center ;">
-								<div class="card_inner_body" style="padding-top: 3px " >
+								<div class="card_inner_body" style="padding-top: 3px; padding-bottom: 20px" >
 
 									<h4 class="card-title" style="font-size: 26px ;" > <font color="#003300" > Spy In The Winter </font></h4> <br/>
 									<p class="card-text">
