--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="static/img/logo.png" type="image/png">
-        <title>Store</title>
+    
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="static/css/bootstrap.css">
         <link rel="stylesheet" href="static/vendors/linericon/style.css">
@@ -36,7 +36,7 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li> 
                                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
-                                <li class="nav-item active"><a class="nav-link" href="/store">Store</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/staff">Staff</a></li>
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
