--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="banner_content text-center">
                     <h2>About Us</h2>
-                   
+                   <p> small information about Rebooks</p>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
         </td>
         </tr>
         </table>
-<div>
+<div style="padding-top: 50px">
 
         <font style="font-size: 18px;">
             <i><b>
