--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="banner_content text-center">
                     <h2>Contact Us</h2>
-                    <p>Platea nullam nostra laoreet potenti hendrerit laoreet enim nisl</p>
+                    <p>Send us a message!</p>
                 </div>
             </div>
         </div>
