--- a/templates/staff.html
+++ b/templates/staff.html
@@ -168,7 +168,18 @@
                text text text text text text text text text text text 
 
     </div>
-    <!--================ End Recent Event Area =================-->
+    <!--================ quate =================-->
+
+<div style="padding-top: 50px">
+
+        <font style="font-size: 18px">
+            <i><b>
+                <p align="center">
+                    <font color="#003300">
+        “A little reading is all the therapy a person needs”</font> </p></b></i> <br/> <p align="center">～Anonymous</p>
+
+
+</div>
 
     </body>
 
