--- a/templates/store.html
+++ b/templates/store.html
@@ -15,7 +15,7 @@
                 <div class="banner_content text-center" >
                    
                     <h2>Books</h2>
-                    
+                    <p> Buy some books!</p>
                   
                 </div>
             </div>
