--- a/templates/donate.html
+++ b/templates/donate.html
@@ -9,7 +9,7 @@
                 <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
                 <div class="container">
                     <div class="banner_content text-center">
-                        <h2>Our Blog</h2>
+                        <h2>Donate </h2>
                         <p>Platea nullam nostra laoreet potenti hendrerit laoreet enim nisl</p>
                     </div>
                 </div>
