--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,13 +41,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li> 
                                 <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/staff">Staff</a></li>
-                                <li class="nav-item submenu dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="/single-blog">Blog Details</a></li>
-                                    </ul>
-                                </li> 
+                                <li class="nav-item"><a class="nav-link" href="/donate">Donate</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                             </ul>
                         </div> 
