done with the admins log in

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2771,6 +2771,10 @@ h6 {
       color: #60bc0f;
       opacity: 1; }
 
+
+.color {
+  color: #71da71;
+}
 /*---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
