--- a/templates/home.html
+++ b/templates/home.html
@@ -185,7 +185,17 @@ Question Library Project in collaboration with Israel Railways
 
 	</section>
 	<!--================ End Features Cause section =================-->
+	<!--================ 	quatess =================-->
+<div >
 
+        <font style="font-size: 18px;">
+            <i><b>
+                <p align="center">
+                    <font color="#003300">
+        “A room without books is like a body without a soul”</font> </p></b></i> <br/> <p align="center">～Cicero</p>
+
+
+</div>
 	
 </body>
 {% endblock %}
