--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -38,7 +38,7 @@
 
                             </p>
                             
-                            <a href="#" class="primary_btn">Learn more</a>
+                            <a href="/staff" class="primary_btn"> About Our staff</a>
                         </div>
                     </div>
                 </div>
