--- a/templates/store.html
+++ b/templates/store.html
@@ -25,8 +25,188 @@
 	
 	<!--================ Start Causes Area =================-->
 	
+    <div>
+                <table class="center">
+                    <tr >
+                        <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+
+                    <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                    </td>
+
+                        <td class="book" > <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+                    
+                       <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>                                       
+                    </tr>
+
+                    <tr >
+                        <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+
+                    <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                    </td>
+
+                        <td class="book" > <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+                    
+                       <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>                                       
+                    </tr>
+
+
+                    <tr >
+                        <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+
+                    <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                    </td>
+
+                        <td class="book" > <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+                    
+                       <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>                                       
+                    </tr>
+
+                    <tr >
+                        <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+
+                    <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                    </td>
+
+                        <td class="book" > <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>
+                    
+                       <td class="book"> <img src="static/img/img.jpg"> 
+                        <br>
+                        name: book
+                        <br>
+                        Author: Name
+                        <br>
+                        price:20 &#8362
+                       
+
+                    </td>                                       
+                    </tr>
+
+                </table>
+    </div>
     </body>
     {% endblock %}
-
 
 </html>
