--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -19,7 +19,7 @@
 <body>
     
 <center>
-    <form action="/add_book" method="POST" style="width: 400px;">
+    <form action="/add_book" method="POST" enctype="multipart/form-data" style="width: 400px;">
   <div class="imgcontainer">
     <font style="font-size: 28px"> Add Book</font>
   </div>
