--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,9 @@
 <body>
 
 {% extends "layout.html" %}
-
+{% block login %}
+        <a class="primary_btn yellow_btn text-white" href="/log_in">Log In</a>
+{% endblock %}
 {% block content %}
 	<!--================ End Header Menu Area =================-->
 	
