--- a/templates/staff.html
+++ b/templates/staff.html
@@ -27,11 +27,11 @@
                 <h1>Our Staff</h1>
             </div>
         
-            <div class="row">
+            <div class="row" >
                 <div class="col-lg-6">
                     <div class="single_event">
                         <div class="row align-items-center">
-                            <div class="col-lg-6 col-md-6">
+                            <div class="col-lg-6 col-md-6" st>
                                 <figure>
                                     <img class="img-fluid w-100" src="img/event/e1.jpg" alt="">
                                     <div class="img-overlay"></div>
