--- a/templates/cart.html
+++ b/templates/cart.html
@@ -11,8 +11,8 @@
             <div class="container">
                 <div class="banner_content text-center" >
                    
-                    <h2>Books</h2>
-                    <p> Buy some books!</p>
+                    <h2>Your Cart</h2>
+                    <p> Here you can see all of the books you have added to your cart</p>
                   
                 </div>
             </div>
