--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
         
     <!--================ Start Header Menu Area =================-->
     <header class="header_area">
+    <a class="primary_btn yellow_btn text-white" id="all_headers" href="/cart">Cart</a>
     {% block login %}
 
     {% endblock %}
